# dirhist

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/dirhist/: cli.h  diff.h  log.h  serialize.h  snapshot.h
src/: cli.cpp  diff.cpp  log.cpp  main.cpp  serialize.cpp  snapshot.cpp  util.cpp
src/internal/: util.h
test/: README.md  test_diff.cpp  test_serialize.cpp  test_snapshot.cpp  test_util.cpp
test_dir/A/E/: file2.txt
test_dir/B/: file4.txt
test_dir/C/D/: file5.txt  file6.txt
